--- a/src/components/container/index.css
+++ b/src/components/container/index.css
@@ -1,3 +1,16 @@
 .container {
-  background-color: var(--color);
+  background-color: var(--background-color);
+  width: auto;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+
+.poster {
+  background-color: var(--project-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 700px;
 }
