--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,28 @@
 :root {
-  --color: salmon;
+  --background-color: white;
+  --project-color: rgb(240, 240, 240);
+  --project-color-dark: #202020;
+  --project-div-width: 80%;
+  font-size: 1vh;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+@import url("https://fonts.googleapis.com/css?family=Lobster|Open+Sans&display=swap");
+
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+button {
+  border: 2px solid var(--project-color-dark);
+  background-color: var(--project-color-dark);
+  color: var(--project-color);
+  border-radius: 2em;
+  width: var(--project-div-width);
+  height: 2em;
+  font-size: 2em;
 }
