Sell Your Design

--- a/src/components/container/index.css
+++ b/src/components/container/index.css
@@ -14,3 +14,15 @@
   align-items: center;
   width: 700px;
 }
+
+@media only screen and (max-width: 768px) {
+  .poster {
+    width: 100vw;
+  }
+}
+
+@media only screen and (orientation: landscape) and (max-width: 1024px) {
+  .poster {
+    width: 100vw;
+  }
+}
