--- a/src/components/headline/index.css
+++ b/src/components/headline/index.css
@@ -2,6 +2,7 @@
   width: var(--project-div-width);
   text-align: center;
   font-family: "Lobster", cursive;
+  font-size: 1.5em;
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -10,18 +11,4 @@
 .design {
   font-family: "Open Sans", sans-serif;
   font-size: 3em;
-}
-
-.dashing {
-  position: relative;
-  width: calc(var(--project-div-width) * 0.2);
-  display: flex;
-  justify-content: space-around;
-}
-
-.dot {
-  width: 0.3em;
-  height: 0.3em;
-  border-radius: 50%;
-  background-color: var(--project-color-dark);
 }
