--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   padding: 0;
 }
 
-@import url("https://fonts.googleapis.com/css?family=Lobster|Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Lobster|Open+Sans:400,700&display=swap");
 
 body {
   font-family: "Open Sans", sans-serif;
@@ -25,7 +25,6 @@ button {
   width: calc(var(--project-div-width) * 0.4);
   height: 3em;
   font-size: 2em;
-  text-decoration: underline;
 }
 
 button:hover {
