--- a/src/components/container/index.css
+++ b/src/components/container/index.css
@@ -10,7 +10,7 @@
   background-color: var(--project-color);
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   width: 700px;
 }
